--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,15 @@
 body{
     margin : 0;
     padding : 0;
-    background : url(Backgound.jpg);
-    background-size: cover;
-    background-position: center;
+    background: linear-gradient(to left, #00AAFF, #00FF6C);
+    background-color: #00FF6C;
     font-family: sans-serif;
 }
 
 .LoginBox{
     width: 320px;
     height: 420px;
-    background: black;
+    background: rgba(0,0,0,0.80);
     background-position: center;
     color: rgb(221, 241, 241);
     top: 30%;
@@ -19,6 +18,7 @@ body{
     translate: translate(-50%,-50%);
     box-sizing: border-box;
     padding: 70px 30px;
+    box-shadow: 0px 10px 15px 10px rgba(0, 0, 0, 0.4);
 
 }
 
@@ -59,6 +59,7 @@ h1 {
 }
 
 .LoginBox input[type="submit"]{
+    cursor: pointer;
     border: none;
     outline: none;
     height: 40px;
@@ -71,7 +72,7 @@ h1 {
 
 .LoginBox input[type="submit"]:hover{
     cursor: pointer;
-    background: #ffc107;
+    background: #96c3cc;
     color: #000;
 }
 
