--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,7 +21,22 @@ body{
     box-shadow: 0px 10px 15px 10px rgba(0, 0, 0, 0.4);
 
 }
-
+#login-error-msg {
+    width: 23%;
+    text-align: center;
+    margin: 0;
+    padding: 5px;
+    font-size: 12px;
+    font-weight: bold;
+    color: #8a0000;
+    border: 1px solid #8a0000;
+    background-color: #e58f8f;
+    opacity: 0;
+  }
+  
+#error-msg-second-line {
+    display: block;
+  }
 .avatar{
     width: 100px;
     height: 100px;
